component-about-us adjustments done isa

--- a/themes/zephyr/front-end/src/components/component-about-us/index.html
+++ b/themes/zephyr/front-end/src/components/component-about-us/index.html
@@ -2,96 +2,114 @@
 <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 <meta content="ie=edge" http-equiv="X-UA-Compatible">
 <div smooth-scroll-container="">
-
-<section class="component-about-us">
-  <div class="container">
-    <div class="about-us">
-      <div class="about-us-title center">
-        <h6 class="headline-6 normal word-up">ABOUT US</h6>
-        <h2 class="headline-2 word-up">10 years of helping companies like yours</h2>
-        <p class="paragraph-1 real-line-up">Zephyr is a specialist digital growth agency with 10 years experience in working with emerging startups in the health and welness space. Over the past decade, we have
-          worked closely with client teams to help them define their proposition and brand profiles, through to designing and developing impactful web experiences and results driven marketing
-          campaigns</p>
-      </div>
-      <div class="about-us-content swiper-container">
-        <div class="swiper-wrapper row-swiper row">
-          <div class="swiper-slide col-xl-4">
-            <div class="about-logo">
-              <div class="image-wrapper iv-st-from-bottom">
-                <img src="./../../html/images/about-logo1.png" alt="about logo1">
-              </div>
-              <p class="paragraph-1 iv-st-from-bottom">Cras varius velit blandit, pellentesque purus blandit, elementum purus. Duis elementum eros quam, et tristique augue porta quis. Aenean rutrum quam vel augue pretium faucibus.</p>
-            </div>
-          </div>
-          <div class="swiper-slide col-xl-4">
-            <div class="about-logo">
-              <div class="image-wrapper iv-st-from-bottom">
-                <img src="./../../html/images/about-logo2.png" alt="about logo2">
-              </div>
-              <p class="paragraph-1 iv-st-from-bottom">Mauris aliquet interdum sapien, eu convallis eros lacinia eget. Mauris leo est, vestibulum at lorem sit amet, vehicula posuere felis. Morbi malesuada, ex in ultricies.</p>
-            </div>
-          </div>
-          <div class="swiper-slide col-xl-4">
-            <div class="about-logo">
-              <div class="image-wrapper iv-st-from-bottom">
-                <img src="./../../html/images/about-logo3.png" alt="about logo3">
-              </div>
-              <p class="paragraph-1 iv-st-from-bottom">Etiam consectetur lorem ut sapien ullamcorper, sed sollicitudin dolor venenatis. Aenean pharetra vel turpis eu tempus. Sed vulputate arcu eu dolor ornare, quis posuere erat.</p>
-            </div>
-          </div>
-          <div class="swiper-slide col-xl-4">
-            <div class="about-logo">
-              <div class="image-wrapper iv-st-from-bottom">
-                <img src="./../../html/images/about-logo4.png" alt="about logo4">
-              </div>
-              <p class="paragraph-1 iv-st-from-bottom">Pellentesque pharetra ex ac mauris dictum, a consectetur diam feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam rhoncus.</p>
-            </div>
-          </div>
-          <div class="swiper-slide col-xl-4">
-            <div class="about-logo">
-              <div class="image-wrapper iv-st-from-bottom">
-                <img src="./../../html/images/about-logo5.png" alt="about logo5">
-              </div>
-              <p class="paragraph-1 iv-st-from-bottom">Etiam laoreet ullamcorper ipsum nec scelerisque. Cras vel neque quis justo interdum porta ut eget sapien. Vestibulum consequat justo fringilla, dapibus sapien sed, blandit odio.</p>
-            </div>
-          </div>
+  
+  <section class="component-about-us">
+    <div class="container">
+      <div class="about-us">
+        <div class="about-us-title center">
+          <h6 class="headline-6 normal word-up">ABOUT US</h6>
+          <h2 class="headline-2 word-up">10 years of helping companies like yours</h2>
+          <p class="paragraph-1 real-line-up">Zephyr is a specialist digital growth agency with 10 years experience in working with emerging startups in the health and welness space. Over the past
+            decade, we have
+            worked closely with client teams to help them define their proposition and brand profiles, through to designing and developing impactful web experiences and results driven marketing
+            campaigns</p>
         </div>
-        <div class="swiper-pagination"></div>
-      </div>
-      <div class="about-us-images">
-        <div class="image-1 image same-image">
-          <div class="image-wrapper iv-st-from-bottom">
-            <img  src="./../../html/images/about-image1.png" alt="about-image-1">
-          </div>
-          <p class="paragraph-1 real-line-up">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet fermentum.</p>
-        </div>
-        <div class="row">
-          <div class="col-12 col-sm-6">
-            <div class="image-2 row-images image">
-              <div class="image-wrapper iv-st-from-bottom">
-              <img src="./../../html/images/about-image2.png" alt="about-image-2">
+        <div class="about-us-content swiper-container">
+          <div class="swiper-wrapper row-swiper row">
+            <div class="swiper-slide col-xl-4">
+              <div class="about-logo">
+                <div class="image-wrapper iv-st-from-bottom">
+                  <a href="#">
+                    <img alt="about logo1" src="./../../html/images/about-logo1.png">
+                  </a>
+                </div>
+                <p class="paragraph-1 iv-st-from-bottom">Cras varius velit blandit, pellentesque purus blandit, elementum purus. Duis elementum eros quam, et tristique augue porta quis. Aenean rutrum
+                  quam vel augue pretium faucibus.</p>
               </div>
-              <p class="paragraph-1 real-line-up">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. </p>
+            </div>
+            <div class="swiper-slide col-xl-4">
+              <div class="about-logo">
+                <div class="image-wrapper iv-st-from-bottom">
+                  <a href="#">
+                    <img alt="about logo2" src="./../../html/images/about-logo2.png">
+                  </a>
+                </div>
+                <p class="paragraph-1 iv-st-from-bottom">Mauris aliquet interdum sapien, eu convallis eros lacinia eget. Mauris leo est, vestibulum at lorem sit amet, vehicula posuere felis. Morbi
+                  malesuada, ex in ultricies.</p>
+              </div>
+            </div>
+            <div class="swiper-slide col-xl-4">
+              <div class="about-logo">
+                <div class="image-wrapper iv-st-from-bottom">
+                  <a href="#">
+                    <img alt="about logo3" src="./../../html/images/about-logo3.png">
+                  </a>
+                </div>
+                <p class="paragraph-1 iv-st-from-bottom">Etiam consectetur lorem ut sapien ullamcorper, sed sollicitudin dolor venenatis. Aenean pharetra vel turpis eu tempus. Sed vulputate arcu eu
+                  dolor ornare, quis posuere erat.</p>
+              </div>
+            </div>
+            <div class="swiper-slide col-xl-4">
+              <div class="about-logo">
+                <div class="image-wrapper iv-st-from-bottom">
+                  <a href="#">
+                    <img alt="about logo4" src="./../../html/images/about-logo4.png">
+                  </a>
+                </div>
+                <p class="paragraph-1 iv-st-from-bottom">Pellentesque pharetra ex ac mauris dictum, a consectetur diam feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                  cubilia curae; Nam rhoncus.</p>
+              </div>
+            </div>
+            <div class="swiper-slide col-xl-4">
+              <div class="about-logo">
+                <div class="image-wrapper iv-st-from-bottom">
+                  <a href="#">
+                    <img alt="about logo5" src="./../../html/images/about-logo5.png">
+                  </a>
+                </div>
+                <p class="paragraph-1 iv-st-from-bottom">Etiam laoreet ullamcorper ipsum nec scelerisque. Cras vel neque quis justo interdum porta ut eget sapien. Vestibulum consequat justo fringilla,
+                  dapibus sapien sed, blandit odio.</p>
+              </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6">
-            <div class="image-3 row-images image">
-              <div class="image-wrapper iv-st-from-bottom">
-              <img src="./../../html/images/about-image3.png" alt="about-image-3">
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="about-us-images">
+          <div class="image-1 image same-image">
+            <div class="image-wrapper iv-st-from-bottom">
+              <img alt="about-image-1" src="./../../html/images/about-image1.png">
+            </div>
+            <p class="paragraph-1 real-line-up">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet
+              fermentum.</p>
+          </div>
+          <div class="row">
+            <div class="col-12 col-sm-6">
+              <div class="image-2 row-images image">
+                <div class="image-wrapper iv-st-from-bottom">
+                  <img alt="about-image-2" src="./../../html/images/about-image2.png">
+                </div>
+                <p class="paragraph-1 real-line-up">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. </p>
               </div>
-              <p class="paragraph-1 real-line-up">Cras mattis consectetur purus sit amet fermentum.</p>
+            </div>
+            <div class="col-12 col-sm-6">
+              <div class="image-3 row-images image">
+                <div class="image-wrapper iv-st-from-bottom">
+                  <img alt="about-image-3" src="./../../html/images/about-image3.png">
+                </div>
+                <p class="paragraph-1 real-line-up">Cras mattis consectetur purus sit amet fermentum.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="image-4 image same-image">
-          <div class="image-wrapper iv-st-from-bottom">
-            <img src="./../../html/images/about-image4.png" alt="about-image-4">
+          <div class="image-4 image same-image">
+            <div class="image-wrapper iv-st-from-bottom">
+              <img alt="about-image-4" src="./../../html/images/about-image4.png">
+            </div>
+            <p class="paragraph-1 real-line-up">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet
+              fermentum.</p>
           </div>
-          <p class="paragraph-1 real-line-up">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet fermentum.</p>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 </div>
 <script src="./main.js"></script>
