component-case-studies two images done

--- a/themes/zephyr/front-end/src/components/component-case-studies/index.html
+++ b/themes/zephyr/front-end/src/components/component-case-studies/index.html
@@ -7,11 +7,10 @@
     <div class="container">
       <div class="paragraph-1 word-up desktop-only">CASE STUDIES</div>
       <h1 class="headline-1 real-line-up">We collaborate with exciting new companies…</h1>
-     <div class="image-content">
-       <div class="image-bg">
-         <img class="mac"  src="../../html/images/macbook.png"  alt="image">
-       </div>
-     </div>
+      <div class="image-wrapper">
+        <img alt="cara" class="cara" src="../../html/images/cara.png">
+        <img alt="macbook" class="mac" src="../../html/images/macbook.png">
+      </div>
       <div class="content">
         <h5 class="headline-5">Fully Charged</h5>
         <h4 class="headline-4">Kickstarting the eBike revolution.</h4>
