component-success-stories two images done component-sector-expertise-image-1 two image done

--- a/themes/zephyr/front-end/src/components/component-sector-expertise-image-1/index.html
+++ b/themes/zephyr/front-end/src/components/component-sector-expertise-image-1/index.html
@@ -7,7 +7,8 @@
   <div class="container">
         <div class="image-1">
           <div class="image-wrapper ">
-            <img src="./../../html/images/home-image%20.png" alt="sector-expertise-image-1">
+            <img alt="cara" class="cara" src="../../html/images/cara.png">
+            <img alt="macbook" class="mac" src="../../html/images/macbook.png">
           </div>
           <p class="paragraph-1 ">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet fermentum.</p>
         </div>
