--- a/themes/zephyr/front-end/src/components/component-sector-expertise-image-1/style.scss
+++ b/themes/zephyr/front-end/src/components/component-sector-expertise-image-1/style.scss
@@ -10,20 +10,24 @@ section.component-sector-expertise-image-1 {
         .image-wrapper {
             position: relative;
             height: 0;
-            padding-top: 62.13%;
-            @include min-medium-screen {
-                padding-top: 50.13%;
-            }
+            padding-top: 50.13%;
             margin-bottom: size(25);
-            
-            img {
-                width: 100%;
-                height: 100%;
+            img{
                 position: absolute;
-                top: 0;
+                top:0;
+                height: 100%;
+                left: 0;
+                &.mac{
+                    width: 62%;
+                    height: auto;
+                    right: 0;
+                    left: auto;
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
             }
         }
-        
+    
         .paragraph-1 {
             @include x-large-screen {
                 padding-right: size(44);
