--- a/themes/zephyr/front-end/src/components/component-success-stories/index.html
+++ b/themes/zephyr/front-end/src/components/component-success-stories/index.html
@@ -10,7 +10,8 @@
       <div class="row">
         <div class="col-12 col-sm-6 card">
           <div class="image-wrapper image-wrapper-1">
-            <img src="../../html/images/phone%20.png" alt="image">
+            <img src="../../html/images/bg-black.png" alt="bg-black">
+            <img style="top: -2.2rem;" class="iphone-frame" src="../../html/images/iPhone9-fram.png" alt="iPhone9-fram">
           </div>
           <div class="content">
             <h5 class="headline-5 word-up">Spencer hart</h5>
@@ -20,7 +21,8 @@
         </div>
         <div class="col-12 col-sm-6 card">
           <div class="image-wrapper image-wrapper-2">
-            <img src="../../html/images/pangaea%20.png" alt="image">
+            <img src="../../html/images/bkueerectangle_8.png" alt="bkueerectangle">
+            <img class="logo" src="../../html/images/pangaea.png" alt="pangaea">
           </div>
           <div class="content">
             <h5 class="headline-5 word-up">Pangaea</h5>
