--- a/themes/zephyr/front-end/src/components/component-grid-images/index.html
+++ b/themes/zephyr/front-end/src/components/component-grid-images/index.html
@@ -6,16 +6,17 @@
   <section class="component-grid-images">
     <div class="container">
       <div class="gide-wrapper">
-        <div class="card iv-st-from-bottom  card-one">
+        <div class="card iv-st-from-bottom card-one">
           <div class="image-wrapper image-wrapper-2">
-            <img  src="../../html/images/phone-2%20.png" alt="image">
+            <img src="../../html/images/whiterectangle.png" alt="whiterectangle">
+            <img style="top:-3.5rem" class="iphone" src="../../html/images/iPhone.png" alt="iPhone">
           </div>
           <div class="content">
             <h5 class="headline-5 word-up">Float</h5>
             <h4 class="headline-4 real-line-up">Democratising financial wellbeing.</h4>
           </div>
         </div>
-        <div class="card iv-st-from-bottom  card-two">
+        <div class="card iv-st-from-bottom card-two">
           <div class="image-wrapper image-wrapper-4">
             <img  src="../../html/images/meeting%20.png" alt="image">
           </div>
@@ -24,18 +25,20 @@
             <h4 class="headline-4 real-line-up">Creating a leading international speakers bureau</h4>
           </div>
         </div>
-        <div class="card iv-st-from-bottom  card-three">
+        <div class="card iv-st-from-bottom card-three">
           <div class="image-wrapper image-wrapper-3">
-            <img  src="../../html/images/pangaea%20.png" alt="image">
+            <img src="../../html/images/bkueerectangle_8.png" alt="bkueerectangle">
+            <img class="logo" src="../../html/images/pangaea.png" alt="pangaea">
           </div>
           <div class="content">
             <h5 class="headline-5 word-up">Pangaea</h5>
             <h4 class="headline-4 real-line-up">Uncover a new wave of medical research</h4>
           </div>
         </div>
-        <div class="card iv-st-from-bottom  card-four">
+        <div class="card iv-st-from-bottom card-four">
           <div class="image-wrapper image-wrapper-5">
-            <img  src="../../html/images/phone%20.png" alt="image">
+            <img src="../../html/images/bg-black.png" alt="bg-black">
+            <img style="top: -2.2rem;" class="iphone-frame" src="../../html/images/iPhone9-fram.png" alt="iPhone9-fram">
           </div>
           <div class="content">
             <h5 class="headline-5 word-up">Spencer Hart</h5>
