--- a/themes/zephyr/front-end/src/components/component-grid-images/style.scss
+++ b/themes/zephyr/front-end/src/components/component-grid-images/style.scss
@@ -35,15 +35,38 @@ section.component-grid-images {
                     top: 0;
                     left: 0;
                     object-fit: cover;
+                    &.iphone{
+                        width: 65%;
+                        height: auto;
+                        left: 50%;
+                        transform: translateX(-50%);
+                    }
+                    &.logo{
+                        width: 59%;
+                        height: auto;
+                        left: 50%;
+                        top: 50%;
+                        transform: translate(-50%,-50%);
+                    }
+                    &.iphone-frame{
+                        width: 61.3%;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        @include x-large-screen{
+                            height: auto;
+                        }
+                        @include max-large-screen{
+                            top: 0 !important;
+                        }
+                    }
                 }
                 
                 &.image-wrapper-2 {
                     padding-top: 110.65%;
-                    
                 }
                 
                 &.image-wrapper-3 {
-                    padding-top: 58.5%;
+                    padding-top: 66.34%;
                 }
                 
                 &.image-wrapper-4 {
@@ -52,7 +75,7 @@ section.component-grid-images {
                 }
                 
                 &.image-wrapper-5 {
-                    padding-top: 115.65%;
+                    padding-top: 100.70%;
                 }
             }
             
