component-about-us two images done

--- a/themes/zephyr/front-end/src/components/component-about-us/index.html
+++ b/themes/zephyr/front-end/src/components/component-about-us/index.html
@@ -78,6 +78,7 @@
           <div class="image-1 image same-image">
             <div class="image-wrapper iv-st-from-bottom">
               <img alt="about-image-1" src="./../../html/images/about-image1.png">
+              <img class="computer" alt="computer" src="./../../html/images/computer.png">
             </div>
             <p class="paragraph-1 real-line-up">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet
               fermentum.</p>
@@ -94,7 +95,8 @@
             <div class="col-12 col-sm-6">
               <div class="image-3 row-images image">
                 <div class="image-wrapper iv-st-from-bottom">
-                  <img alt="about-image-3" src="./../../html/images/about-image3.png">
+                  <img alt="bkueerectangle" src="./../../html/images/bkueerectangle_8.png">
+                  <img alt="pangaea" class="logo" src="./../../html/images/pangaea.png">
                 </div>
                 <p class="paragraph-1 real-line-up">Cras mattis consectetur purus sit amet fermentum.</p>
               </div>
@@ -103,6 +105,7 @@
           <div class="image-4 image same-image">
             <div class="image-wrapper iv-st-from-bottom">
               <img alt="about-image-4" src="./../../html/images/about-image4.png">
+              <img class="girls" alt="girls" src="./../../html/images/girls.png">
             </div>
             <p class="paragraph-1 real-line-up">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet
               fermentum.</p>
