--- a/themes/zephyr/front-end/src/components/component-success-stories/index.html
+++ b/themes/zephyr/front-end/src/components/component-success-stories/index.html
@@ -9,7 +9,7 @@
       <h1 class="headline-1 real-line-up">Other success stories</h1>
       <div class="row">
         <div class="col-12 col-sm-6 card">
-          <div class="image-wrapper image-wrapper-1">
+          <div class="image-wrapper">
             <img src="../../html/images/bg-black.png" alt="bg-black">
             <img style="top: -2.2rem;" class="iphone-frame" src="../../html/images/iPhone9-fram.png" alt="iPhone9-fram">
           </div>
@@ -20,7 +20,7 @@
 
         </div>
         <div class="col-12 col-sm-6 card">
-          <div class="image-wrapper image-wrapper-2">
+          <div class="image-wrapper">
             <img src="../../html/images/bkueerectangle_8.png" alt="bkueerectangle">
             <img class="logo" src="../../html/images/pangaea.png" alt="pangaea">
           </div>
