--- a/themes/zephyr/front-end/src/components/component-success-stories/style.scss
+++ b/themes/zephyr/front-end/src/components/component-success-stories/style.scss
@@ -41,18 +41,16 @@ section.component-success-stories {
         
         .image-wrapper {
             position: relative;
-            height: 0;
             
             img {
-                position: absolute;
                 width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
                 &.iphone-frame{
+                    position: absolute;
                     width: 61.3%;
+                    top: 0;
                     left: 50%;
                     transform: translateX(-50%);
+                    height: 100%;
                     @include x-large-screen{
                         height: auto;
                     }
@@ -65,17 +63,18 @@ section.component-success-stories {
                     height: auto;
                     left: 50%;
                     top: 50%;
+                    position: absolute;
                     transform: translate(-50%,-50%);
                 }
             }
             
-            &.image-wrapper-1 {
-                padding-top: 100.70%;
-            }
-            
-            &.image-wrapper-2 {
-                padding-top: 66.34%;
-            }
+            //&.image-wrapper-1 {
+            //    padding-top: 100.70%;
+            //}
+            //
+            //&.image-wrapper-2 {
+            //    padding-top: 66.34%;
+            //}
         }
         
         .content {
