component-grid-images removed aspc from all images and adjusted some spaces

--- a/themes/zephyr/front-end/src/components/component-grid-images/style.scss
+++ b/themes/zephyr/front-end/src/components/component-grid-images/style.scss
@@ -2,6 +2,10 @@
 @import "src/styles/mixins";
 
 section.component-grid-images {
+    margin-top: size(70);
+    @include min-medium-screen{
+        margin-top: 0;
+    }
     .gide-wrapper {
         display: grid;
         grid-template-columns: 1fr;
@@ -27,21 +31,20 @@ section.component-grid-images {
             
             .image-wrapper {
                 position: relative;
-                
                 img {
                     width: 100%;
-                    height: 100%;
-                    position: absolute;
                     top: 0;
                     left: 0;
                     object-fit: cover;
                     &.iphone{
+                        position: absolute;
                         width: 65%;
                         height: auto;
                         left: 50%;
                         transform: translateX(-50%);
                     }
                     &.logo{
+                        position: absolute;
                         width: 59%;
                         height: auto;
                         left: 50%;
@@ -49,6 +52,7 @@ section.component-grid-images {
                         transform: translate(-50%,-50%);
                     }
                     &.iphone-frame{
+                        position: absolute;
                         width: 61.3%;
                         left: 50%;
                         transform: translateX(-50%);
@@ -61,22 +65,22 @@ section.component-grid-images {
                     }
                 }
                 
-                &.image-wrapper-2 {
-                    padding-top: 110.65%;
-                }
+                //&.image-wrapper-2 {
+                //    padding-top: 110.65%;
+                //}
                 
-                &.image-wrapper-3 {
-                    padding-top: 66.34%;
-                }
-                
-                &.image-wrapper-4 {
-                    padding-top: 76%;
-                    
-                }
-                
-                &.image-wrapper-5 {
-                    padding-top: 100.70%;
-                }
+                //&.image-wrapper-3 {
+                //    padding-top: 66.34%;
+                //}
+                //
+                //&.image-wrapper-4 {
+                //    padding-top: 76%;
+                //
+                //}
+                //
+                //&.image-wrapper-5 {
+                //    padding-top: 100.70%;
+                //}
             }
             
             .content {
