--- a/themes/zephyr/front-end/src/components/component-grid-images/index.html
+++ b/themes/zephyr/front-end/src/components/component-grid-images/index.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="gide-wrapper">
         <div class="card iv-st-from-bottom card-one">
-          <div class="image-wrapper image-wrapper-2">
+          <div class="image-wrapper">
             <img src="../../html/images/whiterectangle.png" alt="whiterectangle">
             <img style="top:-3.5rem" class="iphone" src="../../html/images/iPhone.png" alt="iPhone">
           </div>
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="card iv-st-from-bottom card-two">
-          <div class="image-wrapper image-wrapper-4">
+          <div class="image-wrapper">
             <img  src="../../html/images/meeting%20.png" alt="image">
           </div>
           <div class="content">
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="card iv-st-from-bottom card-three">
-          <div class="image-wrapper image-wrapper-3">
+          <div class="image-wrapper">
             <img src="../../html/images/bkueerectangle_8.png" alt="bkueerectangle">
             <img class="logo" src="../../html/images/pangaea.png" alt="pangaea">
           </div>
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="card iv-st-from-bottom card-four">
-          <div class="image-wrapper image-wrapper-5">
+          <div class="image-wrapper">
             <img src="../../html/images/bg-black.png" alt="bg-black">
             <img style="top: -2.2rem;" class="iphone-frame" src="../../html/images/iPhone9-fram.png" alt="iPhone9-fram">
           </div>
