component-grid-images removed aspc from all images and adjusted some spaces

--- a/themes/zephyr/front-end/src/components/component-grid-images/style.scss
+++ b/themes/zephyr/front-end/src/components/component-grid-images/style.scss
@@ -53,6 +53,7 @@ section.component-grid-images {
                     }
                     &.iphone-frame{
                         position: absolute;
+                        height: 100%;
                         width: 61.3%;
                         left: 50%;
                         transform: translateX(-50%);
