--- a/themes/zephyr/front-end/src/components/component-grid-images/style.scss
+++ b/themes/zephyr/front-end/src/components/component-grid-images/style.scss
@@ -3,32 +3,42 @@
 
 section.component-grid-images {
     margin-top: size(70);
-    @include min-medium-screen{
+    @include min-medium-screen {
         margin-top: 0;
     }
-    .gide-wrapper {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(1, 1fr);
-        grid-row-gap: size(50);
-        @include marginX(-20px);
+    
+    .paragraph-1 {
+        font-size: size(14);
+        font-family: $Sailec;
+        letter-spacing: size(0.44);
+    }
+    
+    .headline-1 {
+        color: $zephyr-gray;
+        @include marginY(size(30), size(72));
         @include min-small-screen {
-            grid-row-gap: size(70);
-            grid-template-columns: repeat(2, 1fr);
+            @include marginY(size(15), size(90));
+            
+        }
+        @include min-medium-screen {
+            font-size: size(45);
+            line-height: size(66);
+            letter-spacing: size(0.44);
         }
         
-        @include min-large-screen {
-            @include marginX(-38px);
+        @include x-large-screen {
+            @include marginY(size(13), size(85));
         }
-        
-        
-        .card {
-            @include paddingX(20px);
-            @include min-large-screen {
-                @include paddingX(38px);
+    }
+    
+    
+    
+    .grid {
+        .grid-item {
+            margin-bottom: size(60);
+            @include x-large-screen{
+                margin-bottom: size(75);
             }
-            
-            
             .image-wrapper {
                 position: relative;
                 img {
@@ -36,92 +46,47 @@ section.component-grid-images {
                     top: 0;
                     left: 0;
                     object-fit: cover;
-                    &.iphone{
+                    
+                    &.iphone {
                         position: absolute;
                         width: 65%;
                         height: auto;
                         left: 50%;
                         transform: translateX(-50%);
                     }
-                    &.logo{
+                    
+                    &.logo {
                         position: absolute;
                         width: 59%;
                         height: auto;
                         left: 50%;
                         top: 50%;
-                        transform: translate(-50%,-50%);
+                        transform: translate(-50%, -50%);
                     }
-                    &.iphone-frame{
+                    
+                    &.iphone-frame {
                         position: absolute;
                         height: 100%;
                         width: 61.3%;
                         left: 50%;
                         transform: translateX(-50%);
-                        @include x-large-screen{
+                        @include x-large-screen {
                             height: auto;
                         }
-                        @include max-large-screen{
+                        @include max-large-screen {
                             top: 0 !important;
                         }
                     }
                 }
                 
-                //&.image-wrapper-2 {
-                //    padding-top: 110.65%;
-                //}
-                
-                //&.image-wrapper-3 {
-                //    padding-top: 66.34%;
-                //}
-                //
-                //&.image-wrapper-4 {
-                //    padding-top: 76%;
-                //
-                //}
-                //
-                //&.image-wrapper-5 {
-                //    padding-top: 100.70%;
-                //}
             }
             
             .content {
                 .headline-5 {
-                    @include marginY(size(23), size(4));
-                    @include min-large-screen {
-                        @include marginY(size(18), size(4));
-                    }
+                    @include marginY(size(20), size(4));
                 }
             }
             
-            &.card-one {
-                @include min-small-screen {
-                    grid-column: 1;
-                    grid-row: 1/3;
-                }
-            }
-            
-            &.card-two {
-                
-                @include min-small-screen {
-                    margin-top: size(-30);
-                    grid-column: 2;
-                    grid-row: 1/2;
-                }
-                @include min-medium-screen{
-                    margin-top: size(-50);
-                }
-            }
-            
-            &.card-three {
-            }
-            
-            &.card-four {
-                @include min-small-screen {
-                    grid-column: 2;
-                    grid-row: 5/2;
-                    
-                }
-            }
         }
     }
 }
