--- a/themes/zephyr/front-end/src/components/component-success-stories/index.html
+++ b/themes/zephyr/front-end/src/components/component-success-stories/index.html
@@ -7,8 +7,8 @@
     <div class="container">
       <div class="paragraph-1 center word-up">case studies</div>
       <h1 class="headline-1 real-line-up">Other success stories</h1>
-      <div class="row">
-        <div class="col-12 col-sm-6 card">
+      <div class="grid">
+        <div class="grid-item">
           <div class="image-wrapper">
             <img src="../../html/images/bg-black.png" alt="bg-black">
             <img style="top: -2.2rem;" class="iphone-frame" src="../../html/images/iPhone9-fram.png" alt="iPhone9-fram">
@@ -18,7 +18,7 @@
             <h4 class="headline-4 real-line-up">Ultra premium men’s tailoring.</h4>
           </div>
         </div>
-        <div class="col-12 col-sm-6 card">
+        <div class="grid-item">
           <div class="image-wrapper">
             <img src="../../html/images/bkueerectangle_8.png" alt="bkueerectangle">
             <img class="logo" src="../../html/images/pangaea.png" alt="pangaea">
@@ -27,7 +27,6 @@
             <h5 class="headline-5 word-up">Pangaea</h5>
             <h4 class="headline-4 real-line-up">Uncovering a new wave of medical research..</h4>
           </div>
-
         </div>
       </div>
     </div>
