--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -349,7 +349,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, form {
 }
 
 // used
-.paragraph, .wysiwyg-block, .wysiwyg-block {
+.paragraph, .wysiwyg-block, .wysiwyg-block, .component-hero p {
     color: $zephyr-white;
     font-family: $Freight;
     font-size: size(14);
