--- a/themes/zephyr/front-end/src/styles/pages/_say-hello.scss
+++ b/themes/zephyr/front-end/src/styles/pages/_say-hello.scss
@@ -18,5 +18,6 @@
     section.component-contact-us {
         position: relative;
         margin-top: size(-243);
+        margin-bottom: size(150);
     }
 }
